mehari/src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_brca1_csq@17-41199660-G-T.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: T
  consequences:
    - missense_variant
    - exonic_splice_region_variant
  putative_impact: moderate
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - coding
  feature_tags:
    - mane_select
    - ref_seq_select
  rank:
    ord: 22
    total: 23
  hgvs_g: g.41199660G>T
  hgvs_n: n.5580G>A
  hgvs_c: c.5467G>A
  hgvs_p: p.Ala1823Thr
  cdna_pos:
    ord: 5580
    total: 7088
  cds_pos:
    ord: 5467
    total: 5592
  protein_pos:
    ord: 1823
    total: 1864
  distance: 0
  strand: -1
  messages: ~
