mehari/src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_brca1_one_variant@17-41196313-G-C.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: C
  consequences:
    - 3_prime_UTR_exon_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - coding
  feature_tags:
    - mane_select
    - ref_seq_select
  rank:
    ord: 23
    total: 23
  hgvs_g: g.41196313G>C
  hgvs_n: n.7087C>G
  hgvs_c: c.*1382C>G
  hgvs_p: p.?
  cdna_pos:
    ord: 7087
    total: 7088
  cds_pos:
    ord: 1382
    total: 5592
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - 3_prime_UTR_exon_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007297.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41196313G>C
  hgvs_n: n.7027C>G
  hgvs_c: c.*1382C>G
  hgvs_p: p.?
  cdna_pos:
    ord: 7027
    total: 7028
  cds_pos:
    ord: 1382
    total: 5451
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - 3_prime_UTR_exon_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007298.3
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41196313G>C
  hgvs_n: n.3681C>G
  hgvs_c: c.*1382C>G
  hgvs_p: p.?
  cdna_pos:
    ord: 3681
    total: 3682
  cds_pos:
    ord: 1382
    total: 2280
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - 3_prime_UTR_exon_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007299.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 22
    total: 22
  hgvs_g: g.41196313G>C
  hgvs_n: n.3695C>G
  hgvs_c: c.*1488C>G
  hgvs_p: p.?
  cdna_pos:
    ord: 3695
    total: 3696
  cds_pos:
    ord: 1488
    total: 2100
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - 3_prime_UTR_exon_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007300.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 24
    total: 24
  hgvs_g: g.41196313G>C
  hgvs_n: n.7150C>G
  hgvs_c: c.*1382C>G
  hgvs_p: p.?
  cdna_pos:
    ord: 7150
    total: 7151
  cds_pos:
    ord: 1382
    total: 5655
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
