mehari/src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_brca1_one_variant@17-41277379-A-C.snap
---
source: src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: C
  consequences:
    - 5_prime_UTR_exon_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - coding
  feature_tags:
    - mane_select
    - ref_seq_select
  rank:
    ord: 1
    total: 23
  hgvs_g: g.41277379A>C
  hgvs_n: n.3T>G
  hgvs_c: c.-111T>G
  hgvs_p: p.?
  cdna_pos:
    ord: 3
    total: 7088
  cds_pos:
    ord: -111
    total: 5592
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - 5_prime_UTR_exon_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007297.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 1
    total: 22
  hgvs_g: g.41277379A>C
  hgvs_n: n.3T>G
  hgvs_c: c.-192T>G
  hgvs_p: p.?
  cdna_pos:
    ord: 3
    total: 7028
  cds_pos:
    ord: -192
    total: 5451
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - upstream_gene_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007298.3
  feature_biotype:
    - coding
  feature_tags: []
  rank: ~
  hgvs_g: g.41277379A>C
  hgvs_n: ~
  hgvs_c: ~
  hgvs_p: ~
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: 1247
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - 5_prime_UTR_exon_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007299.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 1
    total: 22
  hgvs_g: g.41277379A>C
  hgvs_n: n.3T>G
  hgvs_c: c.-105T>G
  hgvs_p: p.?
  cdna_pos:
    ord: 3
    total: 3696
  cds_pos:
    ord: -105
    total: 2100
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: C
  consequences:
    - 5_prime_UTR_exon_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007300.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 1
    total: 24
  hgvs_g: g.41277379A>C
  hgvs_n: n.3T>G
  hgvs_c: c.-111T>G
  hgvs_p: p.?
  cdna_pos:
    ord: 3
    total: 7151
  cds_pos:
    ord: -111
    total: 5655
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
