mehari/src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_brca1_one_variant@17-41277381-G-T.snap
---
source: mehari/src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: T
  consequences:
    - 5_prime_UTR_exon_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007294.4
  feature_biotype:
    - coding
  feature_tags:
    - ref_seq_select
    - mane_select_backport
  rank:
    ord: 1
    total: 23
  hgvs_g: g.41277381G>T
  hgvs_n: n.1G>A
  hgvs_c: c.-113G>A
  hgvs_p: p.?
  cdna_pos:
    ord: 1
    total: 7088
  cds_pos:
    ord: -113
    total: 5592
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: T
  consequences:
    - 5_prime_UTR_exon_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007297.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 1
    total: 22
  hgvs_g: g.41277381G>T
  hgvs_n: n.1G>A
  hgvs_c: c.-194G>A
  hgvs_p: p.?
  cdna_pos:
    ord: 1
    total: 7028
  cds_pos:
    ord: -194
    total: 5451
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: T
  consequences:
    - upstream_gene_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007298.3
  feature_biotype:
    - coding
  feature_tags: []
  rank: ~
  hgvs_g: g.41277381G>T
  hgvs_n: ~
  hgvs_c: ~
  hgvs_p: ~
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: 1249
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: T
  consequences:
    - 5_prime_UTR_exon_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007299.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 1
    total: 22
  hgvs_g: g.41277381G>T
  hgvs_n: n.1G>A
  hgvs_c: c.-107G>A
  hgvs_p: p.?
  cdna_pos:
    ord: 1
    total: 3696
  cds_pos:
    ord: -107
    total: 2100
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: T
  consequences:
    - 5_prime_UTR_exon_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_007300.4
  feature_biotype:
    - coding
  feature_tags: []
  rank:
    ord: 1
    total: 24
  hgvs_g: g.41277381G>T
  hgvs_n: n.1G>A
  hgvs_c: c.-113G>A
  hgvs_p: p.?
  cdna_pos:
    ord: 1
    total: 7151
  cds_pos:
    ord: -113
    total: 5655
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
- allele:
    Alt:
      alternative: T
  consequences:
    - non_coding_transcript_exon_variant
  putative_impact: modifier
  gene_symbol: BRCA1
  gene_id: "HGNC:1100"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NR_027676.2
  feature_biotype:
    - noncoding
  feature_tags: []
  rank:
    ord: 1
    total: 23
  hgvs_g: g.41277381G>T
  hgvs_n: n.1G>A
  hgvs_c: n.1G>A
  hgvs_p: ~
  cdna_pos:
    ord: 1
    total: 7152
  cds_pos: ~
  protein_pos: ~
  distance: 0
  strand: -1
  messages: ~
